--- a/index.html
+++ b/index.html
@@ -635,6 +635,7 @@
                 </div>
                 <div id="EncodeDecodeVigener" class="encodeDecode">
                     <div>
+                        <button id="EnterVigener">Enter</button>
                         <button id="vigenerEncodeBtn" class="EDbuttons">Encode</button>
                         <button id="vigenerDecodeBtn" class="EDbuttons">Decode</button>
                         <input type="text" id="vigenerKey" placeholder="Enter key">
@@ -643,6 +644,7 @@
                             <option value="ua">Ua-Ukrainian</option>
                             <option value="ru">Ru-Russian</option>
                         </select>
+                        <button id="copyVigenerText">Copy</button>
                     </div>
                     <textarea name="" id="inputVigener"></textarea>
                     <textarea name="" id="outputVigener"></textarea>
@@ -1182,6 +1184,7 @@
                         <button id="caesarDecodeBtn">Decode</button>
                     </div>
                     <div>
+                        <button id="EnterCaesar">Enter</button>
                         <label for="caesarKey">
                             <span>Enter key: </span>
                             <input type="number" value="4" max="20" min="1" id="caesarKey">
@@ -1191,6 +1194,7 @@
                             <option value="ua">Ua-Ukrainian</option>
                             <option value="ru">Ru-Russian</option>
                         </select>
+                        <button id="copyCaesarText">Copy</button>
                     </div>
                     <textarea name="" id="inputCaesar"></textarea>
                     <textarea name="" id="outputCaesar"></textarea>
@@ -1641,6 +1645,7 @@
                 </div>
                 <div id="EndocdeDecodeAtbash" class="encodeDecode">
                     <div>
+                        <button id="EnterAtbash">Enter</button>
                         <button id="atbashEncodeBtn">Encode</button>
                         <button id="AtbashDecodeBtn">Decode</button>
                         <select name="" id="AtbashLanguage">
@@ -1648,8 +1653,8 @@
                             <option value="ua">Ua-Ukranian</option>
                             <option value="ru">Ru-Rushen</option>
                         </select>
+                        <button id="copyAtbashText">Copy</button>
                     </div>
-
                     <textarea name="" id="inputAtbash"></textarea>
                     <textarea name="" id="outputAtbash"></textarea>
                 </div>
