--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         «различия» базовая логика компьютеров идеальный побитовый инструмент основа шифрования
                         невероятно простой и мощный механизм
                     </div>
-                    <div id="uaDescriptionXor">🔹 Як взагалі з’явився XOR XOR не придумала якась одна конкретна людина.
+                    <div id="uaDescriptionXor" style="display: none;">🔹 Як взагалі з’явився XOR XOR не придумала якась одна конкретна людина.
                         Він з’явився природно з логіки та математики. Ще у XIX столітті математики активно вивчали:
                         логічні твердження істину та хибу способи поєднання умов Вже існували операції: І АБО НЕ І тут
                         виникла ідея: А що робити, якщо нам потрібне «АБО», але без випадку, коли обидва істинні? Так і
